feat(plotting): add grouped PDF overlays with per-fly CI support
- Add grouped (dodged) PDF layout for multi-group histogram overlays
- Support per-fly exports with mean, CI, and per-panel unit counts
- Enforce normalize=True for per-fly PDF/CDF overlays
- Improve figure sizing heuristics for grouped histograms
- Ensure CI whiskers are centered, masked for NaNs, and visually distinct
- Extend NPZ exports to include n_units_panel and normalize metadata

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
 .vscode
 **/__pycache__/*
+
 imgs/**/*.png*
 imgs/**/*.jpg*
 imgs/**/*.pdf*
 imgs/**/*.tsv*
 plots*/*
 
+/exports/
 logs/*
 build/**
 *.diff
